[b]Revision 1.7-109[/b]
[list]
[li]Added OS abstraction (Win32 compatibility, thanks to Andre Schulz).[/li]
[li]Various code refactorings (cleanups, OS abstraction, ...).[/li]
[li]Fixed crashes caused by skill IDs not locally available in SkillTree.xml.[/li]
[/list]

[b]Revision 1.7-106 to Revision 1.7-108[/b]
[list]
[li]Included PHP backend scripts into SVN.[/li]
[li]Included datafile generator scripts into SVN.[/li]
[li]Fixed multicore compilation on Darwin (OS X) (thanks to Greg Taylor).[/li]
[li]Implemented live SP counting in the character skill tooltips.[/li]
[li]Added WIN32 fixes.[/li]
[li]Confirmation dialog when closing a character.[/li]
[li]New option to add certificates to the training plan.[/li]
[/list]

[b]Revision 1.7-102 to Revision 1.7-105[/b]
[list]
[li]External notifier gets SP/h from training sheet now.[/li]
[li]Training planner shows the total amount of SP in the plan.[/li]
[li]New option to truncate long corporation names.[/li]
[li]Improved code for pedantic 64bit compilation.[/li]
[li]Introduced Character and CharacterList classes.[/li]
[li]Moved most logic related to the char to the Character class.[/li]
[li]Forced most code to deal with Character instead of the sheets directly.[/li]
[li]Once requested, the XML source viewer also shows the SkillQueue.xml.[/li]
[/list]

[b]Revision 1.7-100 to Revision 1.7-101[/b]
[list]
[li]Attribute optimizer for a given training plan.[/li]
[li]Training planner remembers it's dimensions.[/li]
[li]A few refactorings.[/li]
[li]Training planner shows the amount of skills in the plan.[/li]
[li]Improvements for the attribute optimizer.[/li]
[/list]

[b]Revision 1.7-98 to Revision 1.7-99[/b]
[list]
[li]Export of EveMon .emp and .xml skill plans.[/li]
[li]Import of EveMon .emp and .xml skill plans.[/li]
[li]A few refactorings.[/li]
[li]Added a small tool (gemcache) to output cached sheets.[/li]
[li]Added networking abstraction layer.[/li]
[li]Added warning for expired clones.[/li]
[/list]
