@@ -31,7 +31,7 @@ char const* default_config =
     "  exec_data = Congratulations, $CHAR finished $SKILL $LEVEL$NL$NLStatistics about the skill:$NLStart SP: $STARTSP$NLDestination SP: $DESTSP$NLAcquired SP: $NEWSP$NLSP/h: $SPPH$NLTotal training time: $TRAINTIME$NL$NLThis message was generated by GtkEveMon, $LOCALTIME\n"
     "  minimum_sp = 16000\n"
     "[planner]\n"
-    "  columns_format = +0 +1 +2 -3 -4 -5 -6 -7\n"
+    "  columns_format = +0 +1 +2 -3 -4 -5 -6 -7 -8 -9\n"
     "  current_plan = \n"
     "  gui_dimension = 800x550\n"
     "  pane_position = 250\n"
