@@ -46,22 +46,11 @@ XmlTrainingPlanImport::parse_xml (XmlDocumentPtr xmldoc)
       || xmlStrcmp(root->name, (xmlChar const*)"plan"))
     throw Exception("Invalid XML root. Expecting <plan> node.");
 
+  ApiSkillTreePtr tree = ApiSkillTree::request();
+
+  /* Iterate over all plan entries. */
   xmlNodePtr node;
   for (node = root->children; node != 0; node = node->next)
-  {
-    if (node->type != XML_ELEMENT_NODE)
-      continue;
-
-    if (!xmlStrcmp(node->name, (xmlChar const*)"Entries"))
-      break;
-  }
-
-  if (node == 0)
-    throw Exception("Unexpected plan structure. Expecting <Entries> tag.");
-
-  ApiSkillTreePtr tree = ApiSkillTree::request();
-  /* Iterate over all plan entries. */
-  for (node = node->children; node != 0; node = node->next)
   {
     if (node->type != XML_ELEMENT_NODE)
       continue;
@@ -69,36 +58,32 @@ XmlTrainingPlanImport::parse_xml (XmlDocumentPtr xmldoc)
     if (xmlStrcmp(node->name, (xmlChar const*)"entry"))
       continue;
 
-    std::string skill_name;
-    std::string entry_type;
-    int skill_level = -1;
+    int skill_id = this->get_property_int(node, "skillID");
+    int skill_level = this->get_property_int(node, "level");
+    std::string skill_name = this->get_property(node, "skill");
+    std::string entry_type = this->get_property(node, "type");
+    bool prereq = (entry_type == "Prerequisite");
 
-    /* Parse a single plan entry here. */
-    for (xmlNodePtr cnode = node->children; cnode != 0; cnode = cnode->next)
+    if (skill_level < 0)
+      throw Exception("Skill entry without destination level");
+
+    ApiSkill const* skill = 0;
+    if (skill_id >= 0)
+      skill = tree->get_skill_for_id(skill_id);
+    else if (!skill_name.empty())
+      skill = tree->get_skill_for_name(skill_name);
+    else
+      throw Exception("Cannot find skill ID or name in entry");
+
+    if (skill == 0)
     {
-      if (cnode->type != XML_ELEMENT_NODE)
-        continue;
-
-      this->set_string_if_node_text(cnode, "SkillName", skill_name);
-      this->set_string_if_node_text(cnode, "EntryType", entry_type);
-      this->set_int_if_node_text(cnode, "Level", skill_level);
+      std::cout << "Error finding skill \"" << skill_name
+          << "\" (ID " << skill_id << ")" << std::endl;
+      continue;
     }
 
     /* We got a valid skill description. Add it. */
-    if (!skill_name.empty() && !entry_type.empty() && skill_level >= 0)
-    {
-      ApiSkill const* skill = tree->get_skill_for_name(skill_name);
-      if (skill == 0)
-      {
-        std::cout << "Error finding skill ID for " << skill_name << std::endl;
-        continue;
-      }
-      this->plan.push_back(XmlTrainingItem(skill, skill_level, false));
-    }
-    else
-    {
-      std::cout << "Error finding skill description" << std::endl;
-    }
+    this->plan.push_back(XmlTrainingItem(skill, skill_level, prereq));
   }
 }
 
@@ -114,32 +99,33 @@ XmlTrainingPlanExport::write_to_file (std::string const& filename)
 
   std::stringstream xmldata;
   xmldata << "<?xml version=\"1.0\"?>" << std::endl;
+  xmldata << "<!-- Generated by GtkEveMon "
+      << "(http://gtkevemon.battleclinic.com) -->" << std::endl;
   xmldata << "<plan xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\""
-      << " xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">" << std::endl;
-  xmldata << "  <Entries>" << std::endl;
+      << " xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\""
+      << " name=\"GtkEveMon exported\""
+      << " owner=\"unknown\""
+      << " revision=\"2186\">" << std::endl;
+  xmldata << "  <sorting criteria=\"None\" order=\"None\""
+      << " optimizeLearning=\"false\""
+      << " groupByPriority=\"false\" />" << std::endl;
 
   for (std::size_t i = 0; i < this->plan.size(); ++i)
   {
     XmlTrainingItem const& item = this->plan[i];
-    xmldata << "    <entry>" << std::endl;
-    xmldata << "      <SkillName>" << item.skill->name
-        << "</SkillName>" << std::endl;
-    xmldata << "      <Level>" << item.level << "</Level>" << std::endl;
-    xmldata << "      <EntryType>"
+    xmldata << "  <entry skillID=\"" << item.skill->id << "\""
+        << " skill=\"" << item.skill->name << "\""
+        << " level=\"" << item.level << "\""
+        << " priority=\"1\" type=\""
         << (item.prerequisite ? "Prerequisite" : "Planned")
-        << "</EntryType>" << std::endl;
-    xmldata << "    </entry>" << std::endl;
+        << "\"><notes></notes></entry>" << std::endl;
   }
 
-  xmldata << "  </Entries>" << std::endl;
   xmldata << "</plan>" << std::endl;
-  xmldata << "<!-- Generated by GtkEveMon "
-      << "(http://gtkevemon.battleclinic.com) -->" << std::endl;
-
-  std::string xmldata_str = xmldata.str();
 
   /* Write the string stream to file. */
 
+  std::string xmldata_str = xmldata.str();
   std::string extension = filename.substr(filename.size() - 4);
   if (extension == ".emp")
   {
