@@ -1,5 +1,13 @@
-[b]Revision 1.7-109[/b]
+[b]Revision 1.7-112[/b]
 [list]
+[li]Minor build system changes, win32 fixes (by Andre Schulz).[/li]
+[/list]
+
+[b]Revision 1.7-109 to Revision 1.7-111[/b]
+[list]
+[li]Win32 ports: Networking, time functions.[/li]
+[li]Minor versioning backend fixes.[/li]
+[li]Fixed a byteorder issue on MacOS X.[/li]
 [li]Added OS abstraction (Win32 compatibility, thanks to Andre Schulz).[/li]
 [li]Various code refactorings (cleanups, OS abstraction, ...).[/li]
 [li]Fixed crashes caused by skill IDs not locally available in SkillTree.xml.[/li]
